Remove duplicate HTML structure from index.html
Removed duplicate HTML structure and cleaned up the document.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <div class="about-inner">
         <figure class="about-photo">
-          <img src="images/profile.jpg" alt="Profile photo" />
+          <img src="profile.jpg" alt="Profile photo" />
         </figure>
 
         <div class="about-text">
@@ -130,3 +130,4 @@
   </footer>
 </body>
 </html>
+
