--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <div class="about-inner">
         <figure class="about-photo">
-          <img src="profile.jpg" alt="Profile photo" />
+          <img src="Profile.jpg" alt="Profile photo" />
         </figure>
 
         <div class="about-text">
@@ -130,4 +130,5 @@
   </footer>
 </body>
 </html>
+
 
